src/objects/SBQQ__PriceAction__c.object
<CustomObject>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>RuleExternalId__c</fullName>
        <formula>SBQQ__Rule__r.ExternalId__c</formula>
        <label>RuleExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SourceVariableExternalId__c</fullName>
        <formula>SBQQ__SourceVariable__r.ExternalId__c</formula>
        <label>SourceVariableExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>